# retrieval-augmented-generation-app

./: README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/core/: __init__.py  settings.py
app/rag/: chain.py  llm.py  loader.py  vectorstore.py
app/rag/data_sources/: tours.txt
app/routes/: __init__.py  chat_route.py
app/schemas/: chat_schema.py
data/: postmaster.pid
data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 1249  16709  16710  16712  16718  16719  16727  2600  2602  2608  2616  2617  2673  2674  2690  2691  2699  2701  2702  2704  2753  pg_internal.init
data/base/24576/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  174  175  2187  2228  2337  24901  24902  24904  24910  24911  24918  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  2603_fsm  2603_vm  2605  2605_fsm  (+80 more)
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
