[tool.poetry]
name = "retrieval-augmented-generation-app"
version = "0.1.0"
description = ""
authors = ["hungpm372 <hungpm372@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-chroma = "^0.1.1"
langchain-openai = "^0.1.10"
bs4 = "^0.0.2"
langchainhub = "^0.1.20"
unstructured = "^0.14.9"
psutil = "^6.0.0"
langserve = {extras = ["all"], version = "^0.2.2"}
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
